模写サイトをworksから外した

--- a/works.html
+++ b/works.html
@@ -169,7 +169,7 @@
                     </div>
                     <p>PHP/MySQLを用いて簡易的な掲示板を作りました。herokuで公開しています。ローカルではDockerを用いて開発しました。</p>
                 </div>
-                <div class="works_content fadein_2">
+                <!--<div class="works_content fadein_2">
                     <div class="works-box">
                         <a href="collection-OF-works/report-HTML-CSS/index.html">
                             <img src="./img/site_8.png" alt="未来電子テクノジーでのレポート">
@@ -183,7 +183,7 @@
                         </a>
                     </div>
                     <p>インターンをしていた未来電子テクノロジーで課された課題で作成したサイトです。HTMLとCSSの学習した内容を簡潔にまとめたサイトとなっています。</p>
-                </div>
+                </div>-->
                 <!--<div class="works_content fadein_4">
                     <div class="works-box">
                         <a href="collection-OF-works/airbnb_Replication/index.html">
@@ -199,7 +199,7 @@
                     </div>
                     <p>インターンをしていた未来電子テクノロジーから課された課題で作成したサイトです。airbnbのサイトを模写しました。完成度は低いですが、アウトプットとして学習のための1作品です。このサイトは比較的模写しやすいと思いました。なので初学者にはオススメです。</p>
                 </div>-->
-                <div class="works_content fadein_1">
+                <div class="works_content fadein_2">
                     <div class="works-box">
                         <a href="collection-OF-works/Fictional_Ophthalmology/home.html">
                             <img src="./img/site_6.png" alt="架空コーポレートサイト">
@@ -214,7 +214,7 @@
                     </div>
                     <p>このサイトはモックアップからデザインカンプ、コーディングと全て1から自分で考えて作成したサイトです。カルーセル部分をcssのみで実装しました。唯一ポートフォリオと言える作品となっています。</p>
                 </div>
-                <div class="works_content fadein_2">
+                <!--<div class="works_content fadein_2">
                     <div class="works-box">
                         <a href="collection-OF-works/shopping-site-coding/top.html">
                             <img src="./img/site_5.png" alt="架空ショッピングサイト">
@@ -228,8 +228,8 @@
                         </a>
                     </div>
                     <p>あるデザインデータから作成したショッピングサイトです。実際にクライアントから依頼を受けるのと同様な形で作成したサイトです。模写のような練習となりました。レスポンシブ化とSCSSを使っています。学習のための1作品です。</p>
-                </div>
-                <div class="works_content fadein_1">
+                </div>-->
+                <!--<div class="works_content fadein_1">
                     <div class="works-box">
                         <a href="collection-OF-works/corporate-site-coding/index.html">
                             <img src="./img/site_4.png" alt="架空コーポレートサイト">
@@ -243,7 +243,7 @@
                         </a>
                     </div>
                     <p>あるデザインデータから作成したコーポレートサイトです。このサイトにはフレームワークskeltonを使っています。初めてフレームワークを用いて作成したサイトです。SCSSも使っています。また、レスポンシブ化もしています。学習のための1作品です。</p>
-                </div>
+                </div>-->
                 <!--<div class="works_content fadein_8">
                     <div class="works-box">
                         <a href="collection-OF-works/WEB-Experiment/index.html">
@@ -259,7 +259,7 @@
                     </div>
                     <p>情報理工学実験のテーマ8で作成した実験レポートとしてのサイトです。webオーサリングについて調べ学習等を行いました。ここで初めてW3Cの存在を知りました。また、このサイトはレスポンシブ化されていません。pcでみてください。学習のための1作品です。</p>
                 </div> -->
-                <div class="works_content fadein_2">
+                <!--<div class="works_content fadein_2">
                     <div class="works-box">
                         <a href="collection-OF-works/Creative_HTML_and_CSS/index.html">
                             <img src="./img/site_1.png" alt="架空カフェサイト">
@@ -273,7 +273,7 @@
                         </a>
                     </div>
                     <p>ある技術書を一冊やり終えて完成したサイトです。初めて作成したサイトであり、サイト作成の流れを掴めました。また、このサイトはレスポンシブ化されていません。pcでみてください。学習のための1作品です。</p>
-                </div>
+                </div>-->
             </div>
         </section>
     </main>
