誤字を修正

--- a/works.html
+++ b/works.html
@@ -122,7 +122,7 @@
                             </div>
                         </a>
                     </div>
-                    <p>GAS/LINE Messageing API/Python/Googleスプレッドシート/Herokuを使って開発しました。早起きを促すbotです。春休みどうしても早起きができなかったので作ってみました。</p>
+                    <p>GAS/LINE Messaging API/Python/Googleスプレッドシート/Herokuを使って開発しました。早起きを促すbotです。春休みどうしても早起きができなかったので作ってみました。</p>
                 </div>
                 <div class="works_content fadein_1">
                     <div class="works-box">
